--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,27 @@ Default: 1
   box-sizing: border-box;
 }
 
+html {
+  /* font-size: 10px; */
+  /* 10px / 16px = 0.625 = 62.5% */
+  /* Percentage of user's browser font-size setting */
+  font-size: 62.5%;
+}
+
 body {
   font-family: sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
+}
+
+.test {
+  /* width: 1000px; */
+  background-color: red;
+  /* max-width: 1000px; */
+  color: #fff;
+  max-width: 50rem;
+  padding: 4rem;
+  font-size: 2rem;
+  /* 1 rem = 16px -> 500rem */
 }
