--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,17 @@
   margin-bottom: 1.2rem;
 }
 
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+.step-img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .step-img {
-  width: 50%;
+  width: 35%;
 }
