--- a/css/style.css
+++ b/css/style.css
@@ -140,8 +140,29 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+
+.step-img-box::before {
+  content: "";
+  display: block;
+  width: 60%;
+  /* height: 60%; */
+
+  /* 60% of parent's width */
+  padding-bottom: 60%;
+
+  background-color: #fdf2e9;
+  border-radius: 50%;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
 }
 
 .step-img {
   width: 35%;
+  /* z-index: 10; */
 }
