feat: add smaller circles

--- a/css/style.css
+++ b/css/style.css
@@ -143,9 +143,18 @@
   position: relative;
 }
 
-.step-img-box::before {
+.step-img-box::before,
+.step-img-box::after {
   content: "";
   display: block;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.step-img-box::before {
   width: 60%;
   /* height: 60%; */
 
@@ -153,12 +162,13 @@
   padding-bottom: 60%;
 
   background-color: #fdf2e9;
-  border-radius: 50%;
+  z-index: -2;
+}
 
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.step-img-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+  background-color: #fae5d3;
   z-index: -1;
 }
 
