--- a/css/general.css
+++ b/css/general.css
@@ -22,7 +22,7 @@ Paragraph default: 1.6
 --- 02 COLORS
 
 - Primary: #e67e22
-- Tints: #fdf2e9
+- Tints: #fdf2e9, #fae5d3
 - Shades: #cf711f
 - Accents:
 - Greys: #555, #333
