--- a/css/style.css
+++ b/css/style.css
@@ -205,3 +205,11 @@
   width: 35%;
   /* z-index: 10; */
 }
+
+/***************************/
+/* MEALS SECTION */
+/***************************/
+
+.section-meals {
+  padding: 9.6rem 0;
+}
