feat: add the all recipes link

--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,11 @@
   width: 100%;
 }
 
+.all-recipes {
+  text-align: center;
+  font-size: 1.8rem;
+}
+
 .list {
   list-style: none;
   display: flex;
