--- a/css/style.css
+++ b/css/style.css
@@ -311,3 +311,11 @@
   height: 3rem;
   color: #e67e22;
 }
+
+/***************************/
+/* TESTIMONIALS SECTION */
+/***************************/
+
+.section-testimonials {
+  padding: 9.6rem 0;
+}
