--- a/css/style.css
+++ b/css/style.css
@@ -342,3 +342,13 @@
   font-size: 1.6rem;
   color: #777;
 }
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.gallery-item img {
+  display: block;
+  width: 100%;
+}
