style: add gallery & testimonial styles

--- a/css/general.css
+++ b/css/general.css
@@ -25,7 +25,7 @@ Paragraph default: 1.6
 - Tints: #fdf2e9, #fae5d3
 - Shades: #cf711f
 - Accents:
-- Greys: #555, #333
+- Greys: #555, #333, #6f6f6f (lightest grey allowed on #fdf2e9)
 
 --- 05 SHADOWS
 
