style: add some styles
Add a border around the starter pricing plan and a background color to the complete plan.

--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,6 @@
 }
 
 .pricing-plan {
-  background-color: #fdf2e9;
   border-radius: 11px;
   padding: 4.8rem;
   width: 75%;
@@ -369,6 +368,11 @@
 
 .pricing-plan--starter {
   justify-self: end;
+  border: 2px solid #fdf2e9;
+}
+
+.pricing-plan--complete {
+  background-color: #fdf2e9;
 }
 
 .plan-header {
