--- a/css/general.css
+++ b/css/general.css
@@ -22,12 +22,14 @@ Paragraph default: 1.6
 --- 02 COLORS
 
 - Primary: #e67e22
-- Tints: #fdf2e9, #fae5d3
+- Tints: #fdf2e9, #fae5d3, #eb984e
 - Shades: #cf711f
 - Accents:
 - Greys: #555, #333, #6f6f6f (lightest grey allowed on #fdf2e9)
 
 --- 05 SHADOWS
+
+0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 
 --- 06 BORDER-RADIUS
 
