--- a/css/general.css
+++ b/css/general.css
@@ -23,7 +23,7 @@ Paragraph default: 1.6
 
 - Primary: #e67e22
 - Tints: #fdf2e9, #fae5d3, #eb984e
-- Shades: #cf711f
+- Shades: #cf711f, #45260a
 - Accents:
 - Greys: #555, #333, #6f6f6f (lightest grey allowed on #fdf2e9)
 
@@ -141,6 +141,7 @@ body {
   letter-spacing: 0.75px;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -149,6 +150,12 @@ body {
   font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
+
+  /* Only necessary for .btn (these are the styles for the form button basically */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+
   /* Put transition on original "state" */
   /* transition: background-color 0.3s; */
   transition: all 0.3s;
@@ -178,6 +185,18 @@ body {
 
   /* Trick to add border inside: */
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:link,
@@ -214,6 +233,13 @@ body {
   width: 3rem;
   height: 3rem;
   color: #e67e22;
+}
+
+*:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22;
+  outline-offset: 8px; */
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 /* HELPER/SETTINGS CLASSES */
