--- a/css/general.css
+++ b/css/general.css
@@ -25,7 +25,7 @@ Paragraph default: 1.6
 - Tints: #fdf2e9, #fae5d3, #eb984e
 - Shades: #cf711f, #45260a
 - Accents:
-- Greys: #555, #333, #6f6f6f (lightest grey allowed on #fdf2e9)
+- Greys: #888, #767676 (lightest grey allowed on #fff), #555, #333, #6f6f6f (lightest grey allowed on #fdf2e9)
 
 --- 05 SHADOWS
 
