feat: add queries at <944px breakpoint
basically for tablets

--- a/css/general.css
+++ b/css/general.css
@@ -12,8 +12,10 @@ Bold: 700
 
 - Line heights:
 Default: 1
+Medium: 1.2
 Small: 1.05
 Paragraph default: 1.6
+Large: 1.8
 
 - Letter spacing:
 -0.5px
@@ -233,6 +235,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1.6rem;
+  line-height: 1.2;
 }
 
 .list-icon {
