--- a/css/general.css
+++ b/css/general.css
@@ -57,6 +57,8 @@ html {
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
   overflow-x: hidden;
+  /* Doesn't work on Safari */
+  /* scroll-behavior: smooth; */
 }
 
 body {
