--- a/css/queries.css
+++ b/css/queries.css
@@ -129,7 +129,9 @@ Instead, 1rem = 1em = 16px */
   }
 
   .main-nav {
-    background-color: rgba(255, 255, 255, 0.97);
+    background-color: rgba(255, 255, 255, 0.6);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
     position: absolute;
     top: 0;
     left: 0;
